fix: marketcap filter

--- a/frontend/src/app/core/layout/dashboard/dashboard.component.html
+++ b/frontend/src/app/core/layout/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
                   <h2 class="title is-7">{{ item.symbol }}</h2>
                   <h3 class="subtitle is-7">{{ item.company_name }}</h3>
                   <p class="is-size-7">Listing Board: {{ item.listing_board }}</p>
-                  <p class="is-size-7">Price: {{ item.currentPrice }}</p>
+                  <p class="is-size-7">Price: {{ item.currentPrice | currency: 'Rp ' }}</p>
                   <p class="is-size-7">Sector : {{ item.sector }}</p>
                   <p class="is-size-7">Industry : {{ item.industry }}</p>
                   <p class="is-size-7">
