--- a/frontend/src/app/core/layout/homepage/homepage.component.html
+++ b/frontend/src/app/core/layout/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar class="app-navbar"></app-navbar>
 <section class="hero is-halfheight custom-hero">
   <div class="hero-body">
     <div class="container has-text-centered">
