--- a/frontend/src/app/core/layout/homepage/homepage.component.scss
+++ b/frontend/src/app/core/layout/homepage/homepage.component.scss
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
 //   display: flex;
-  margin-top: 20px;
+  margin-top: 5rem;
   width: 30%; 
   height: 30%;
   
