--- a/frontend/src/app/core/layout/navbar/navbar.component.scss
+++ b/frontend/src/app/core/layout/navbar/navbar.component.scss
@@ -3,3 +3,10 @@
     justify-content: center;
 }
 
+.navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+  }
