--- a/frontend/src/app/core/layout/side-nav/side-nav.component.scss
+++ b/frontend/src/app/core/layout/side-nav/side-nav.component.scss
@@ -8,10 +8,7 @@
 //     flex-direction: column;
 //   }
   
-  .radio-group{
-    // margin-left: 0;
-    padding-left: 0;
-  }
+ 
 //   .radio-group {
 //     display: grid;
 //     grid-template-columns: 1fr;
@@ -30,6 +27,7 @@
 .container{
     border-color: var(--monkey-primary-01);
     margin-bottom: 1rem;
+    // margin-top: 1rem;
 }
 
 .input{
@@ -68,3 +66,6 @@
   margin-top: 5px;
 }
 
+hr.new1 {
+  border-top: 1px solid var(--monkey-primary-01);
+}
