--- a/frontend/src/app/core/layout/side-nav/side-nav.component.html
+++ b/frontend/src/app/core/layout/side-nav/side-nav.component.html
@@ -8,93 +8,111 @@
     </ul>
   </div>
 
-  <hr class="new1"/>
+  <hr class="new1" />
   <div class="container">
-     
     <div class="notification">
-      <label class="menu-label ">Sector</label>
+      <label class="menu-label">Sector</label>
       <div class="select is-small is-fullwidth">
-        <select title="dropdown is-fullwidth"  (change)="changeSector($event)">
+        <select title="dropdown is-fullwidth" (change)="changeSector($event)">
           <option value="">All</option>
-          <option *ngFor="let item of sector" [value]="item">{{item}}</option>
+          <option *ngFor="let item of sector" [value]="item">{{ item }}</option>
         </select>
       </div>
     </div>
 
     <div class="notification">
-      <label class="menu-label ">Industry</label>
+      <label class="menu-label">Industry</label>
       <div class="select is-small is-fullwidth">
-        <select title="dropdown is-fullwidth"  (change)="changeIndustry($event)">
+        <select title="dropdown is-fullwidth" (change)="changeIndustry($event)">
           <option value="">All</option>
-          <option *ngFor="let item of industry" [value]="item">{{item}}</option>
+          <option *ngFor="let item of industry" [value]="item">
+            {{ item }}
+          </option>
         </select>
       </div>
     </div>
-
   </div>
 
-
   <div class="container">
     <div class="notification">
-    
-      <div class="count-filter control is-small ">
+      <div class="count-filter control is-small">
         <label class="menu-label radio">Market Cap</label>
-        <div class="input-group is-fullwidth ">
+        <div class="input-group is-fullwidth">
           <input
-          class="input num-input is-small"
-          type="number"
-          min="0"
-          placeholder="MIN"
-        /> - 
-        <input
-          class="input num-input is-small"
-          type="number"
-          min="0"
-          placeholder="MAX"
-        />
+            [(ngModel)]="currentMinMarketCap"
+            class="input num-input is-small"
+            type="number"
+            min="0"
+            placeholder="MIN"
+          />
+          -
+          <input
+            [(ngModel)]="currentMaxMarketCap"
+            class="input num-input is-small"
+            type="number"
+            min="0"
+            placeholder="MAX"
+          />
+        </div>
+        <!-- <button
+          (click)="setMarketCap(currentMinMarketCap, currentMaxMarketCap)"
+          class="button apply-button is-info is-small is-fullwidth"
+        >
+          Apply
+        </button> -->
       </div>
-      <button class=" button apply-button is-info is-small is-fullwidth">Apply</button>
-      </div>
-      
-      
 
-      <div class="count-filter control is-small ">
+      <div class="count-filter control is-small">
         <label class="menu-label radio">PRICE</label>
-        <div class="input-group is-fullwidth ">
+        <div class="input-group is-fullwidth">
           <input
-          class="input num-input is-small"
-          type="number"
-          placeholder="MIN"
-        /> - 
-        <input
-          class="input num-input is-small"
-          type="number"
-          placeholder="MAX"
-        />
+            [(ngModel)]="currentMinPrice"
+            min="0"
+            class="input num-input is-small"
+            type="number"
+            placeholder="MIN"
+          />
+          -
+          <input
+            [(ngModel)]="currentMaxPrice"
+            min="0"
+            class="input num-input is-small"
+            type="number"
+            placeholder="MAX"
+          />
+        </div>
+        <!-- <button
+        (click)="setPrice(currentMinPrice, currentMaxPrice)" 
+        class="button apply-button is-info is-small is-fullwidth">
+          Apply
+        </button> -->
       </div>
-      <button class=" button apply-button is-info is-small is-fullwidth">Apply</button>
-      </div>
-      
-      
 
-      <div class="count-filter control is-small ">
+      <div class="count-filter control is-small">
         <label class="menu-label radio">Dividend rate</label>
-        <div class="input-group is-fullwidth ">
+        <div class="input-group is-fullwidth">
           <input
-          class="input num-input is-small"
-          type="number"
-          placeholder="MIN"
-        /> - 
-        <input
-          class="input num-input is-small"
-          type="number"
-          placeholder="MAX"
-        />
+            min="0"
+            [(ngModel)]="currentMinDividendRate"
+            class="input num-input is-small"
+            type="number"
+            placeholder="MIN"
+          />
+          -
+          <input
+            [(ngModel)]="currentMaxDividendRate"
+            min="0"
+            class="input num-input is-small"
+            type="number"
+            placeholder="MAX"
+          />
+        </div>
+        <button 
+          (click)="setNumberFilter(currentMinMarketCap, currentMaxMarketCap, currentMinPrice, currentMaxPrice, currentMinDividendRate, currentMaxDividendRate)"
+          class="button apply-button is-info is-small is-fullwidth">
+          Apply
+        </button>
       </div>
-      <button class=" button apply-button is-info is-small is-fullwidth">Apply</button>
-      </div>
-      
-      
     </div>
   </div>
 </aside>
