--- a/frontend/src/app/shared/component/histogram/histogram.component.html
+++ b/frontend/src/app/shared/component/histogram/histogram.component.html
@@ -1,1 +1,7 @@
-<google-chart [data]="histogram"></google-chart>
+<div class="container">
+    <google-chart [data]="histogram"></google-chart>
+<!-- <div >
+    <img [src]="histogramImageUrl" alt="histogram">
+</div> -->
+
+</div>
