learn reusable component

--- a/frontend/src/app/features/components/histogram-analysis/histogram-analysis.component.html
+++ b/frontend/src/app/features/components/histogram-analysis/histogram-analysis.component.html
@@ -11,7 +11,7 @@
         metric="returnOnEquity"
       ></app-histogram>
     </div>
-    <!-- <div class="cell">
+    <div class="cell">
       <app-histogram
         sector="Technology"
         metric="returnOnEquity"
@@ -61,6 +61,6 @@
         sector="Basic Materials"
         metric="returnOnEquity"
       ></app-histogram>
-    </div> -->
+    </div>
   </div>
 </div>
