--- a/frontend/src/app/features/stock-info/side-nav/side-nav.component.html
+++ b/frontend/src/app/features/stock-info/side-nav/side-nav.component.html
@@ -1,16 +1,8 @@
 <aside class="menu">
-  <div class="container">
-    <p class="menu-label">Navigation</p>
-    <ul class="menu-list">
-      <li><a>Dashboard</a></li>
-      <li><a>Stocks</a></li>
-      <li><a>Settings</a></li>
-    </ul>
-  </div>
-
+ 
 
   
-  <hr class="new1" />
+  <!-- <hr class="new1" /> -->
   <div class="container">
 
     <div class="notification">
