--- a/frontend/src/app/core/layout/dashboard-canvas/dashboard-canvas.component.html
+++ b/frontend/src/app/core/layout/dashboard-canvas/dashboard-canvas.component.html
@@ -5,7 +5,7 @@
             <app-side-nav></app-side-nav>
         </div>
         <div class="cell is-col-span-4">
-            <app-filter-container></app-filter-container>
+            <app-filter-component keyword="sector"></app-filter-component>
         </div>
         <div class="cell is-col-span-4">
             <app-histogram-analysis></app-histogram-analysis>
