--- a/frontend/src/app/shared/component/histogram/histogram.component.html
+++ b/frontend/src/app/shared/component/histogram/histogram.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <google-chart [data]="histogram"></google-chart>
+    <google-chart [data]="histogram" *ngIf="chartData.length > 1"></google-chart>
 <!-- <div >
     <img [src]="histogramImageUrl" alt="histogram">
 </div> -->
