feat: histogram grouped by metric, fix: refactor histogram-analysis, histogram & filter reusable components -> done

--- a/frontend/src/app/core/layout/dashboard-canvas/dashboard-canvas.component.html
+++ b/frontend/src/app/core/layout/dashboard-canvas/dashboard-canvas.component.html
@@ -1,20 +1,15 @@
 <div class="container is-fluid">
   <div class="fixed-grid has-5-cols  ">
     <div class="grid">
+        <div class="notification has-text-centered	cell is-col-span-5  ">
+            <h1 class="title is-align-self-center ">Dashboard Histogram</h1>
+        </div>
         <div class="cell is-row-span-3">
             <app-side-nav></app-side-nav>
         </div>
         <div class="cell is-col-span-4">
-            <app-filter-component keyword="sector"></app-filter-component>
-        </div>
-        <div class="cell is-col-span-4">
             <app-histogram-analysis></app-histogram-analysis>
         </div>
-        <div class="cell is-col-span-4">
-            <app-pagination></app-pagination>
-        </div>
     </div>
-    <!-- <div class="column is-one-fifth side-nav "></div> -->
-    <!-- <div class="column notification canvas "></div> -->
   </div> 
 </div>
