--- a/frontend/src/app/features/components/histogram-analysis/histogram-analysis.component.html
+++ b/frontend/src/app/features/components/histogram-analysis/histogram-analysis.component.html
@@ -1,66 +1,18 @@
+<app-filter-component keyword="sector"></app-filter-component>
+<hr class="new1" />
+<app-filter-component
+  (keywordEvent)="receiveChangeMetric($event)"
+  [currentOption]="currentMetric"
+  keyword="metrics"
+></app-filter-component>
+<hr class="new1" />
 <div class="fixed-grid">
   <div
     class="grid notification is-white has-3-cols-fullhd has-3-cols-widescreen has-2-cols-desktop has-2-cols-tablet has-1-cols-mobile"
   >
-    <div class="cell">
-      <app-histogram sector="Energy" metric="returnOnEquity"> </app-histogram>
+    <div class="cell" *ngFor="let item of histogramData">
+        <app-histogram [sector]="item.sector" [dataTable]="item.chartData" [title]="item.title"  [metric]="currentMetric"> </app-histogram>
     </div>
-    <div class="cell">
-      <app-histogram
-        sector="Consumer Cyclical"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Technology"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Real Estate"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Industrials"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Healthcare"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Consumer Defensive"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram sector="Utilities" metric="returnOnEquity"></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Financial Services"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Communication Services"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
-    <div class="cell">
-      <app-histogram
-        sector="Basic Materials"
-        metric="returnOnEquity"
-      ></app-histogram>
-    </div>
+
   </div>
 </div>
