--- a/frontend/src/app/shared/component/histogram/histogram.component.html
+++ b/frontend/src/app/shared/component/histogram/histogram.component.html
@@ -1,7 +1,4 @@
 <div class="container">
-    <google-chart [data]="histogram" *ngIf="chartData.length > 1"></google-chart>
-<!-- <div >
-    <img [src]="histogramImageUrl" alt="histogram">
-</div> -->
+    <google-chart [data]="histogram" ></google-chart>
 
 </div>
