--- a/frontend/src/app/features/components/histogram-analysis/histogram-analysis.component.html
+++ b/frontend/src/app/features/components/histogram-analysis/histogram-analysis.component.html
@@ -1,18 +1,55 @@
-<app-filter-component keyword="sector"></app-filter-component>
-<hr class="new1" />
-<app-filter-component
-  (keywordEvent)="receiveChangeMetric($event)"
-  [currentOption]="currentMetric"
-  keyword="metrics"
-></app-filter-component>
-<hr class="new1" />
-<div class="fixed-grid">
-  <div
-    class="grid notification is-white has-3-cols-fullhd has-3-cols-widescreen has-2-cols-desktop has-2-cols-tablet has-1-cols-mobile"
-  >
-    <div class="cell" *ngFor="let item of histogramData">
-        <app-histogram [sector]="item.sector" [dataTable]="item.chartData" [title]="item.title"  [metric]="currentMetric"> </app-histogram>
+<div class="fixed-grid has-5-cols">
+  <div class="grid">
+    <div class="notification has-text-centered cell is-col-span-5">
+      <h1 class="title is-align-self-center">Dashboard Histogram</h1>
     </div>
+    <div class="cell is-row-span-3">
+      <app-radio
+        (groupByEvent)="receiveChangeGroupBy($event)"
+        [currentGroupBy]="currentGroupBy"
+      ></app-radio>
+    </div>
+    <div class="cell is-col-span-4">
+      <app-filter-component keyword="sector"></app-filter-component>
+      <hr class="new1" />
+      <app-filter-component
+        (keywordEvent)="receiveChangeMetric($event)"
+        [currentOption]="currentMetric"
+        keyword="metrics"
+      ></app-filter-component>
+      <hr class="new1" />
 
+      <!-- </div> -->
+      <!-- <div class="cell is-col-span-4"> -->
+      <div class="fixed-grid is-fluid">
+        <div
+          class="grid notification is-white has-3-cols-fullhd has-3-cols-widescreen has-2-cols-desktop has-2-cols-tablet has-1-cols-mobile"
+        >
+          <ng-container *ngIf="currentGroupBy == 'sector'">
+            <div class="cell" *ngFor="let item of histogramData">
+              <app-histogram
+                [metric]="item.metric"
+                [dataTable]="item.chartData"
+                [title]="item.title"
+                [sector]="currentSector"
+              >
+              </app-histogram>
+            </div>
+          </ng-container>
+
+          <ng-container *ngIf="currentGroupBy == 'metric'">
+            <div class="cell" *ngFor="let item of histogramData">
+              <app-histogram
+                [sector]="item.sector"
+                [dataTable]="item.chartData"
+                [title]="item.title"
+                [metric]="currentMetric"
+              >
+              </app-histogram>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
