--- a/frontend/src/app/features/components/stock-info/filter-container/filter-container.component.scss
+++ b/frontend/src/app/features/components/stock-info/filter-container/filter-container.component.scss
@@ -15,19 +15,34 @@
   width: 10rem;
 }
 
-.select-wrapper{
+
+.fixed-grid {
   display: flex;
-  justify-content: flex-end;
+  flex-wrap: wrap; /* Enable wrapping of items */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.grid {
+  flex: 1 1 20%; /* Set a flexible basis for each item */
+  padding: 0.5rem;
+  box-sizing: border-box;
+}
+
+.cell {
+  display: block;
   width: 100%;
 }
 
+@media (max-width: 768px) {
+  .grid {
+    flex: 1 1 50%; /* Adjust basis for medium screens */
+  }
+}
 
-// .fixed-grid {
-//   display: grid;
-//   grid-template-columns: repeat(5, 1fr);
-// }
-// .grid{
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-// }
+@media (max-width: 480px) {
+  .grid {
+    flex: 1 1 100%; /* Adjust basis for small screens */
+  }
+}
