--- a/frontend/src/app/core/layout/homepage/homepage.component.html
+++ b/frontend/src/app/core/layout/homepage/homepage.component.html
@@ -44,7 +44,7 @@
 </section>
   <app-dashboard></app-dashboard>
 
-<app-dashboard-canvas></app-dashboard-canvas>
+<!-- <app-dashboard-canvas></app-dashboard-canvas> -->
 
 <app-footer></app-footer>
 
