--- a/frontend/src/app/shared/component/radio/radio.component.html
+++ b/frontend/src/app/shared/component/radio/radio.component.html
@@ -1,8 +1,15 @@
-<div class="notification flex-container ">
-  <div class="control" *ngFor="let item of model.list">
-    <label class="radio">
-      <input type="radio" [value]="item"  name="foobar" (change)="onItemChange(item)" [checked]="item === model.current"/>
-      {{ item }}
-    </label>
-  </div>
-</div>
+<div class="notification  fixed-grid has-1-cols">
+    <div class="grid">
+        <div class="cell"><label for="menu-label">{{label}}</label></div>
+      <div class="flex-container">
+        <div class="control cell " *ngFor="let item of items">
+            <label class="filter-radio">
+              <input type="radio" [value]="item"  [name]="groupName" (change)="onItemChange(item)" [checked]="item === currentItem"/>
+              {{ item }}
+            </label>
+          </div>
+    
+      </div>      
+            
+    </div>
+    </div>
