feat: dynamic render stock-info &&  backend trimmedmean & dataset handler -> done

--- a/frontend/src/app/core/layout/dashboard-canvas/dashboard-canvas.component.html
+++ b/frontend/src/app/core/layout/dashboard-canvas/dashboard-canvas.component.html
@@ -1,9 +1,4 @@
 
 <div class="container is-fluid">
-        
-        
- <app-histogram-analysis></app-histogram-analysis>
-            
- 
-   
+    <ng-template #container></ng-template>
 </div>
