--- a/frontend/src/app/shared/component/histogram/histogram.component.html
+++ b/frontend/src/app/shared/component/histogram/histogram.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <google-chart [data]="histogram"  ></google-chart>
-
+    <p class="additional is-size-7">MEAN: <span class="tag is-info">{{histogram.options.subtitle}}</span></p>
 </div>
