--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -92,7 +92,9 @@ $container-max-width: iv.$fullhd !default;
   --monkey-primary-01: #0ac497;
   --monkey-primary-02: #a5236e;
   --monkey-primary-03: #0a92c4;
+  --monkey-primary-04: #eabfb9;
   --monkey-secondary-01: #bbf1ff;
+
 
   --light: #d8dbe0;
   --dark: #28292c;
