--- a/frontend/src/app/features/components/financials/financials.component.html
+++ b/frontend/src/app/features/components/financials/financials.component.html
@@ -31,6 +31,7 @@
         [items]="symbolList"
         [currentItem]="selectedSymbol"
         [groupName]="'symbolGroup'"
+        [label]="'Ticker:'"
         ></app-checkboxes>
       </ng-container>
 
